Sat Jan  5 13:20:32 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/Declaration.java: removed.

	* net/loveruby/cflat/ast/Definition.java: removed.

	* net/loveruby/cflat/ast/Entity.java: inherits Node now.

	* net/loveruby/cflat/ast/TypeDefinition.java: inherits Node now.

	* net/loveruby/cflat/ast/ToplevelScope.java: do not depend on
	  Declaration.

	* net/loveruby/cflat/compiler/TypeResolver.java: ditto.

	* net/loveruby/cflat/ast/CaseNode.java: inherits StmtNode.

Sat Jan  5 12:52:38 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/ExprNode.java: has all LHSNode methods.

	* net/loveruby/cflat/ast/LHSNode.java: removed (methods merged
	  into ExprNode).

	* net/loveruby/cflat/ast/CastNode.java: should implement
	  #isConstantAddress.

	* net/loveruby/cflat/ast/DereferenceNode.java: does not implement
	  LHSNode.

	* net/loveruby/cflat/ast/ArefNode.java: ditto.

	* net/loveruby/cflat/ast/PtrMemberNode.java: ditto.

	* net/loveruby/cflat/ast/MemberNode.java: ditto.

	* net/loveruby/cflat/ast/VariableNode.java: ditto.

	* net/loveruby/cflat/ast/LiteralNode.java: ditto.

	* net/loveruby/cflat/compiler/CodeGenerator.java: cast not needed.

	* test/cast3.cb: test cast on LHS.

	* test/test.sh: run it.

Sat Jan  5 12:23:25 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: show error location.

	* net/loveruby/cflat/compiler/TypeResolver.java: ditto.

	* net/loveruby/cflat/compiler/TypeChecker.java: ditto.

	* net/loveruby/cflat/compiler/ErrorHandler.java: ditto.

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java: ditto.

	* net/loveruby/cflat/compiler/JumpResolver.java: ditto.

	* net/loveruby/cflat/type/TypeTable.java: ditto.

	* net/loveruby/cflat/ast/Scope.java: ditto.

	* net/loveruby/cflat/type/NamedType.java: introduce new common
	  superclass of ComplexType and UserType.

	* net/loveruby/cflat/type/ComplexType.java: inherit NamedType.
